# floating_palette

./: .gitignore  CONTRIBUTING.md  README.md  melos.yaml  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  publish.yml  release.yml
floating_palette/: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
floating_palette/doc/: advanced.md
floating_palette/docs/: advanced.md  migration.md
floating_palette/example/: README.md  pubspec.yaml
floating_palette/example/lib/: main.dart  palette_setup.dart
floating_palette/example/lib/events/: keyboard_events.dart  notion_events.dart  text_selection_events.dart
floating_palette/example/lib/palettes/: chat_bubble_palette.dart  clock_palette.dart  custom_shape_glass_palette.dart  demo_palette.dart  editor_palette.dart  slash_menu_palette.dart  spotlight_palette.dart  style_menu_palette.dart  text_selection_palette.dart  virtual_keyboard_palette.dart
floating_palette/example/lib/theme/: brand.dart
floating_palette/example/macos/Flutter/: GeneratedPluginRegistrant.swift
floating_palette/example/scripts/: install-debug.sh
floating_palette/example/test/: app_icon_test.dart  logo_golden_test.dart
floating_palette/lib/: floating_palette.dart  floating_palette_advanced.dart
floating_palette/macos/: floating_palette.podspec
floating_palette/macos/Classes/: FloatingPalettePlugin.swift
floating_palette/src/: ffi_interface.h
floating_palette/test/: animation_client_test.dart  appearance_client_test.dart  background_capture_client_test.dart  config_test.dart  effects_helper_test.dart  focus_client_test.dart  frame_client_test.dart  input_client_test.dart  input_manager_test.dart  messaging_test.dart  native_bridge_test.dart  palette_context_test.dart  palette_controller_test.dart  palette_host_test.dart  screen_client_test.dart  size_reporter_test.dart  snap_client_test.dart  text_selection_client_test.dart  transform_client_test.dart  visibility_client_test.dart  window_client_test.dart  zorder_client_test.dart
floating_palette/windows/: CMakeLists.txt  floating_palette_plugin.cpp  floating_palette_plugin.h  floating_palette_plugin_c_api.cpp
floating_palette/windows/coordinators/: drag_coordinator.cpp  drag_coordinator.h
floating_palette/windows/core/: dpi_helper.h  logger.h  monitor_helper.cpp  monitor_helper.h  palette_binary_messenger.h  param_helpers.h  window_store.h
floating_palette/windows/ffi/: ffi_interface.cpp  ffi_interface.h
floating_palette/windows/include/floating_palette/: floating_palette_plugin_c_api.h
floating_palette/windows/services/: animation_service.cpp  animation_service.h  appearance_service.cpp  appearance_service.h  background_capture_service.cpp  background_capture_service.h  focus_service.cpp  focus_service.h  frame_service.cpp  frame_service.h  host_service.cpp  host_service.h  input_service.cpp  input_service.h  message_service.cpp  message_service.h  screen_service.cpp  screen_service.h  snap_service.cpp  snap_service.h  text_selection_service.cpp  text_selection_service.h  transform_service.cpp  transform_service.h  visibility_service.cpp  visibility_service.h  window_channel_router.cpp  window_channel_router.h  window_service.cpp  window_service.h  zorder_service.cpp  zorder_service.h
floating_palette_annotations/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
floating_palette_annotations/lib/: floating_palette_annotations.dart
floating_palette_annotations/lib/src/: behavior_enums.dart  palette.dart  palette_app.dart  palette_defaults.dart  preset.dart  protocol.dart
floating_palette_generator/: CHANGELOG.md  README.md  build.yaml  pubspec.yaml
floating_palette_generator/lib/: floating_palette_generator.dart
floating_palette_generator/lib/src/: palette_generator.dart  utils.dart
floating_palette_generator/test/: utils_test.dart
(+131 files in other folders)
